[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "progetto"
version = "0.1.0"
description = "Generatore di password sicure da linea di comando."
requires-python = ">=3.8"

[project.scripts]
genpw = "progetto.secure_password_generator:main"

[tool.setuptools.packages.find]
where = ["."]
